# bloplan_backend

./: build.sh  pyproject.toml  render.yaml  requirements.txt
config/: settings.py  urls.py
tasks/: admin.py  models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_client_task_task_name.py  0003_alter_task_created_at.py  0004_alter_task_created_at.py  0005_alter_task_client_alter_task_task_name.py  0006_task_note.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_name_alter_user_first_name_alter_user_last_name.py
