[tool.poetry]
name = "calender-backend"
version = "0.1.0"
description = ""
authors = ["'leechanghwan' <'showmev12@gmail.com'>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
djangorestframework = "<3.15.0"
django-cors-headers = "<4.6.0"
django-environ = "^0.11.2"
dj-database-url = "<2.3.0"
psycopg2-binary = "^2.9.10"
whitenoise = {extras = ["brotli"], version = "^6.8.2"}
gunicorn = "^23.0.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
